fix: sidenav z-index

--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -23,6 +23,8 @@
   position: fixed;
   width: 100%;
   height: 76px;
+
+  z-index: var(--z-modal);
 }
 
 .l-main {
